# garmin-golf-analyzier

./: .gitignore  README.md  build.sh  dev.sh  package-lock.json  package.json  vite.config.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  models.rs  mtp.rs  parser.rs  store.rs
src-tauri/src/native/: garmin_mtp  garmin_mtp.c
web/: index.html
web/css/: main.css
web/js/: app.js  nlg-engine.js  nlg-templates.js
