[package]
name = "garmin-analyzer"
version = "0.1.0"
description = "Garmin golf round analyzer"
authors = ["Chester Kim"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri            = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde            = { version = "1", features = ["derive"] }
serde_json       = "1"
fitparser        = "0.10"
sled             = "0.34"
chrono           = { version = "0.4", features = ["serde"] }
sha2             = "0.10"
dirs       = "6"
hex        = "0.4"

[features]
custom-protocol = ["tauri/custom-protocol"]
